<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground">
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Título -->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"/>

            <!-- EditText con Hint -->
            <EditText
                android:id="@+id/etQuery"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextSecondary"
                android:backgroundTint="@color/colorAccent"/>

            <!-- Acciones principales -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_search"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/colorText"  />

                <ImageButton
                    android:id="@+id/btnRandom"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/btn_random"
                    android:src="@android:drawable/ic_menu_rotate" />
            </LinearLayout>

            <!-- Opciones de imagen -->
            <CheckBox
                android:id="@+id/cbShiny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/shiny"
                android:textColor="@color/colorText"
                android:buttonTint="@color/colorAccent"/>

            <ToggleButton
                android:id="@+id/tgSpriteArtwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textOff="@string/sprite_artwork_off"
                android:textOn="@string/sprite_artwork_on"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorText"/>

            <RadioGroup
                android:id="@+id/rgSide"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbFront"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/front"
                    android:textColor="@color/colorText"
                    android:buttonTint="@color/colorAccent"/>

                <RadioButton
                    android:id="@+id/rbBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/back"
                    android:textColor="@color/colorText"
                    android:buttonTint="@color/colorAccent"/>
            </RadioGroup>

            <Switch
                android:id="@+id/swDetails"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:text="@string/details_switch_on"
                android:textColor="@color/colorText"
                android:thumbTint="@color/colorAccent"
                android:trackTint="@color/colorAccent"/>

            <!-- Imagen del Pokémon -->
            <ImageView
                android:id="@+id/ivPokemon"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="12dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/iv_pokemon"
                android:scaleType="fitCenter" />

            <!-- Info básica -->
            <TextView
                android:id="@+id/tvBasic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_basic"
                android:textStyle="bold"
                android:textColor="@color/colorText"/>

            <!-- Detalles (ocultos con el Switch) -->
            <TextView
                android:id="@+id/tvDetails"
                android:text="Detalles (tipo, peso, habilidades...)"
                android:visibility="gone"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextSecondary"/>

            <!-- Limpiar -->
            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/btn_clear"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/colorText"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
